fixed horizontal scroll bug removed unnecessary overflow-auto

--- a/src/Workspace.scss
+++ b/src/Workspace.scss
@@ -273,10 +273,6 @@ body {
   overflow-x: hidden;
 }
 
-.overflow-auto {
-  overflow: auto;
-}
-
 .overflow-y-auto {
   overflow-y: auto;
 }
